# communautofinder_telegrambot_python

./: .gitignore  README.md  TODO.MD  docker-compose.yml  pylintrc  pyproject.toml
back_reservauto/back_reservauto/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
back_reservauto/back_reservauto/controllers/api/: main.py
back_reservauto/back_reservauto/controllers/api/searches/: crud.py
back_reservauto/back_reservauto/controllers/api/users/: crud.py  router.py
back_reservauto/back_reservauto/models/searches/: schemas.py
back_reservauto/back_reservauto/models/users/: models.py
back_reservauto/back_reservauto/routers/api/: users.py
back_reservauto/back_reservauto/routers/api/users/: crud.py  models.py  router.py
communauto_sdk/: README.md  main.py  pyproject.toml
communauto_sdk/communauto_sdk/: __init__.py  client.py  logger.py
communauto_sdk/reservauto/: client.py
communauto_sdk/tests/: test_client.py
communautofinder_telegrambot/tests/: run.sh
communautofinder_telegrambot_python/: __init__.py
database/: schemas.sql
docs/: architecture.drawio  entities.drawio
libraries/sdk_reservauto/: main.py  pyproject.toml
libraries/sdk_reservauto/reservauto/: client.py
libraries/sdk_reservauto/reservauto/models/: Branch.py  City.py  Station.py
libraries/sdk_reservauto/tests/: test_client.py
reservauto_sdk/: README.md  main.py  pyproject.toml
sdk_reservauto/: main.py  pyproject.toml
sdk_reservauto/reservauto/: client.py
sdk_reservauto/tests/: test_client.py
services/api/: Dockerfile  pyproject.toml
services/api/back_reservauto/: database.py  dependencies.py  main.py
services/api/back_reservauto/controllers/api/: main.py
services/api/back_reservauto/controllers/api/searches/: crud.py  router.py
services/api/back_reservauto/controllers/api/users/: crud.py  router.py
services/api/back_reservauto/models/searches/: models.py  schemas.py
services/api/back_reservauto/models/users/: models.py  schemas.py
services/api/tests/: test_searches.py  test_users.py
services/database/: schemas.sql
services/telegrambot/: Dockerfile  pyproject.toml
services/telegrambot/telegrambot_reservauto/: __main__.py  welcome.py
services/telegrambot/telegrambot_reservauto/utilities/: logger.py  orm.py
telegrambot_reservauto/: .env  pyproject.toml
telegrambot_reservauto/telegrambot_reservauto/: __main__.py  account.py  orm.py  search_station.py  welcome.py
telegrambot_reservauto/tests/: run.sh
