[tool.poetry]
name = "reservauto"
version = "0.1.5"
description = "Unofficial Python package for Reservauto's API"
authors = ["FloDevelops <65234487+FloDevelops@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "reservauto" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.6.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
